cmake_minimum_required(VERSION 3.21)
project(DSA_Lab)

set(CMAKE_CXX_STANDARD 17)



add_executable(Lab_1_1 Lab_1_1.cpp)
add_executable(Lab_1_2 Lab_1_2.cpp)
add_executable(Lab_1_3 Lab_1_3.cpp)
add_executable(Lab_1_4 Lab_1_4.cpp)
add_executable(InsertionSort "Insertion Sort.cpp")
add_executable(MergeSort "Merge Sort.cpp")
add_executable(Lab_3_2_profit Lab_3_2_profit.cpp)
add_executable(Lab_3_2_profit_new Lab_3_2_profit_new.cpp)
add_executable(MergeSortRelatedQ MergeSortRelatedQ.cpp)
add_executable(matrixMult matrixMult.cpp)
add_executable(pool pool.cpp)
add_executable(lab5_1 lab5_1.cpp)
add_executable(lab5_2 lab5_2.cpp)
add_executable(tut6_1 tut6_1.cpp)
add_executable(lab6_1 lab6_1.cpp)
add_executable(lab6_2 lab6_2.cpp)
add_executable(lab7_1 lab7_1.cpp)
add_executable(lab7_2 lab7_2.cpp)
add_executable(lab8_1 lab8_1.cpp)
add_executable(lab8_2 lab8_2.cpp)
add_executable(graph graph.cpp)
add_executable(dp SIP/dp.cpp)
add_executable(lab9_1 lab9_1.cpp)
add_executable(lab9_2 lab9_2.cpp)